# MRUVocabulary

./: CMakeLists.txt  README.md
assets/.vocabulary/: settings.txt
cmake/: ExternalMariaDBConnector.cmake.in  ExternalStandaloneTTL.cmake.in  ExternalStandaloneTXML.cmake.in  ExternalTTL.cmake.in  ExternalTXML.cmake.in
common/base_command_parser/: CommandArguments.h  CommandArguments.hpp  DBAuthParam.cpp  DBAuthParam.h  DBServiceParam.cpp  DBServiceParam.h  DestinationFormat.cpp  DestinationFormat.h  DestinationValue.cpp  DestinationValue.h  FilterWords.cpp  FilterWords.hpp  GenericCommandArguments.h  GenericCommandArguments.hpp  LogLevel.cpp  LogLevel.h  ParamCount.h  RegexFilterParam.cpp  RegexFilterParam.h  RegexFilterWords.cpp  RegexFilterWords.hpp  TranslationOrder.cpp  TranslationOrder.h  TypedValue.hpp  ValueBase.h  ValueBase.hpp  XDXFValue.cpp  XDXFValue.h
common/db/: DBConnection.h  DBConnectionPool.cpp  DBConnectionPool.h  DBException.h  DBMySQLConnection.cpp
config/: settings.txt.in
plugins/: BasePluginDeclarations.h  BasePluginExports.h  CMakeLists.txt
plugins/decoders/: CMakeLists.txt  DecoderExport.h  DecoderInterface.h  PluginDecodedData.cpp  PluginDecodedData.h
plugins/decoders/fb2/: CMakeLists.txt  FB2Decoder.cpp  FB2Decoder.h
plugins/decoders/txt/: CMakeLists.txt  TxtDecoder.cpp  TxtDecoder.h
plugins/decoders/vers/: PluginDecodedData.cpp  PluginDecodedData.h
plugins/inter_plugins_interfaces/: ISharedTranslatedData.h
plugins/interfaces/: PluginCtx.h  PluginInterface.h
plugins/output/: CMakeLists.txt  FormatMapper.h  IncomingTranslatorData.cpp  IncomingTranslatorData.hpp  IncomingTranslatorDataInterface.h  OutputExport.h  OutputInterface.h  TranslatorSharedData.hpp
plugins/output/db/: CMakeLists.txt  DBPlugin.cpp  DBPlugin.h
plugins/output/vers/: TranslatorSharedDataImpl.cpp  TranslatorSharedDataImpl_v0.cpp  TranslatorSharedDataImpl_v0.hpp  TranslatorSharedDataImpl_v1.cpp  TranslatorSharedDataImpl_v1.hpp
plugins/output/xdxf/: CMakeLists.txt  Formatter.hpp  TranslatorSharedData.cpp  TranslatorSharedDataImpl.h  XDXFOutputPlugin.cpp  XDXFOutputPlugin.h
plugins/output/xdxf/model/: MultiArticle.hpp  MultiArticleSerializer.hpp
plugins/translators/: CMakeLists.txt  PluginTranslatedData.cpp  PluginTranslatedData.h  TranslatorExport.h  TranslatorInterface.h  TranslatorSharedData.cpp  TranslatorSharedData.h  TranslatorSharedDataImpl.h
plugins/translators/multi_xdxf/: CMakeLists.txt  MultiXDXFPlugin.cpp  MultiXDXFPlugin.h
plugins/translators/multi_xdxf/model/: MultiArticle.hpp  MultiArticleSerializer.hpp
plugins/translators/vers/: TranslatedDataStructure_v0.h  TranslatedDataStructure_v1.h  TranslatedData_v0.cpp  TranslatedData_v0.h
plugins/translators/xdxf/: CMakeLists.txt  XDXFPlugin.cpp  XDXFPlugin.h
src/: main.cpp
src/command_parser/: CommandArguments.cpp  MainCommandArguments.h  SourceValue.h  ValueParsing.cpp
src/doc/: Documentation.cpp  Documentation.h  manual.h
src/pluginWrapper/: DecoderPluginWrapper.cpp  DecoderPluginWrapper.h  OutputPluginWrapper.cpp  OutputPluginWrapper.h  PluginHolder.cpp  PluginHolder.h  TranslatorPluginWrapper.cpp  TranslatorPluginWrapper.h
src/resources/: DecoderResource.h  OutputResource.h  ResourceFramework.cpp  ResourceFramework.h  ResourceLoader.h  Settings.h  TranslatorResource.h
src/resources/impl/: DecoderResource.cpp  OutputResource.cpp  Settings.cpp  TranslatorResource.cpp
